# gnupgshell

./: .autotools  .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  config.h.in~  configure.ac  libtool
lang/: MOcreate.bat  POcreate.cmd  POupdate.cmd
m4/: Makefile.am
propgrid/: Makefile.am  advprops.cpp  odcombo.cpp  odcombo.h  pg_dox_mainpage.h  propdev.h  propgrid.cpp  propgrid.h  props.cpp
setup/: Setup.nsi  license.txt
src/: .gitignore  Makefile.am  app_resources.cpp  app_resources.h  delete-16x16x32b.xpm  delete.xpm  encrypt-16x16x32b.xpm  exit-16x16x32b.xpm  externdata.txt  file_manager-16x16x32b.xpm  files.txt  gnupgshell.h  htmbook.xpm  makefile.vc  new.xpm  pen_yellow-16x16x32b.xpm  powered_by_wxwidgets_88x31.xpm  public-16x16x32b.xpm  quit.xpm  redo.xpm  refresh-16x16x32b.xpm  resource.h  retreive-16x16x32b.xpm  secret-16x16x32b.xpm  send-16x16x32b.xpm  settings-16x16x32b.xpm  sign-16x16x32b.xpm  verify.xpm  wizard.xpm  wxGnuPGKey.cpp  wxGnuPGKey.h  wxGnuPGKeyListCtrl.cpp  wxGnuPGKeyListCtrl.h  wxGnuPGKeyPair.cpp  wxGnuPGKeyPair.h  wxGnuPGShell.pjd  wxGnuPGShell.res  wxGnuPGShellAboutDialog.cpp  wxGnuPGShellAboutDialog.h  wxGnuPGShellAboutHeader.psd  (+34 more)
tests/: Makefile.am  main.c
wxTranslationHelper/: Makefile.am  wxTranslationHelper.cpp  wxTranslationHelper.h
