bin_PROGRAMS = gnupgshell

gnupgshell_LDADD = @LIBS@
gnupgshell_CXXFLAGS = @CXXFLAGS@
gnupgshell_SOURCES = \
	app_resources.cpp               \
	wxGnuPGKey.cpp                  \
	wxGnuPGKeyListCtrl.cpp          \
	wxGnuPGKeyPair.cpp              \
	wxGnuPGShellAboutDialog.cpp     \
	wxgnupgshelladvkeysettings.cpp  \
	wxgnupgshellapp.cpp             \
	wxgnupgshellbackup.cpp          \
	wxgnupgshelleditkey.cpp         \
	wxgnupgshellexpiration.cpp      \
	wxgnupgshellfilecheck.cpp       \
	wxgnupgshellfilemanager.cpp     \
	wxGnuPGShellImportKey.cpp       \
	wxgnupgshellkeygenwizard.cpp    \
	wxgnupgshellkeyringeditor.cpp   \
	wxgnupgshellpasskey.cpp         \
	wxGnuPGShellRevokeKey.cpp       \
	wxGnuPGShellSelectRecipient.cpp \
	wxgnupgshellsettings.cpp        \
	wxgnupgshelltrust.cpp           \
	wxGnuPGWrapper.cpp
